@@ -6,7 +6,6 @@ $t->app->asset->process;
 
 $t->get_ok('/')->status_is(200)
   ->element_exists(qq(link[href="/asset/cbac517842/main.css"]));
-
 $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)
   ->content_unlike(qr{green.*green}s)->content_like(qr{green;}s);
 
@@ -21,21 +20,17 @@ $t->app->asset->process;
 
 $t->get_ok('/')->status_is(200)
   ->element_exists(qq(link[href="/asset/98f95f2ef4/app.css"]));
-
 $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)
   ->content_unlike(qr{green.*green}s)->content_like(qr{green;}s);
 
-unlink File::Spec->catfile(split '/')
-  for (
-  't/assets/cache/main-36fb02dacb.css',    # Because MOJO_ASSETPACK_CLEANUP=0
-  't/assets/cache/local/sass/forms/_forms.scss',
-  't/assets/cache/local/sass/forms/_input-fields.scss',
-  );
+unlink File::Spec->catfile(qw(t assets cache main-36fb02dacb.css));
+unlink File::Spec->catfile(qw(t assets cache local sass forms _forms.scss));
+unlink File::Spec->catfile(qw(t assets cache local sass forms _input-fields.scss));
 
 done_testing;
 
 sub t {
-  my $t = t::Helper->t(pipes => [qw(Sass Css Combine)]);
+  my $t = t::Helper->t(pipes => [qw(Css Sass Combine)]);
   my $r = $t->app->routes;
   $r->get('/sass/ext.scss'                 => {text => qq(\@import "forms/forms";\n)});
   $r->get('/sass/forms/_forms.scss'        => {text => qq(\@import 'input-fields';\n)});
