@@ -2,7 +2,9 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 1.05 Not Released
  - Need to "use CSS::Sass 3.3.0" to avoid test failures on missing features
+ - Add support for automatic download of fonts #75
  - Fix adding route earlier than on the first request #77
+ - Fix setting url() on asset from db file
 
 1.04 2016-04-08T22:40:29+0200
  - Fix Pipe::Reloader and files from def file
